--- a/4/wymagania.tex
+++ b/4/wymagania.tex
@@ -179,7 +179,7 @@ Próbę powtórzono dziesięciokrotnie, wyniki można zaobserwować w tabeli \re
 	\centering
 	\begin{tabular}{| l | l | l |}	
 		\hline
-		\textbf{Numer testu} & \textbf{Web service} & \textbf{Prototyp} \\ \hline
+		\textbf{Numer testu} & \textbf{Web service [ms]} & \textbf{Prototyp [ms]} \\ \hline
 		1 & 618 & 560\\ \hline
 		2 & 477 & 801\\ \hline
 		3 & 433 & 546\\ \hline
@@ -218,7 +218,7 @@ Próbę powtórzono dziesięciokrotnie, wyniki można zaosberwować w tabeli \re
 	\centering
 	\begin{tabular}{| l | l | l |}	
 		\hline
-		\textbf{Numer testu} & \textbf{Web service} & \textbf{Prototyp} \\ \hline
+		\textbf{Numer testu} & \textbf{Web service [ms]} & \textbf{Prototyp [ms]} \\ \hline
 		1 & 2961 & 3712\\ \hline
 		2 & 3509 & 5486\\ \hline
 		3 & 4427 & 4135\\ \hline
@@ -251,7 +251,7 @@ W jego wyniku otrzymano plik dźwiękowy w formacie mp3, zawierający odczyt tek
 	\centering
 	\begin{tabular}{| l | l | l |}	
 		\hline
-		\textbf{Numer testu} & \textbf{Web services} & \textbf{Prototyp} \\ \hline
+		\textbf{Numer testu} & \textbf{Web services [ms]} & \textbf{Prototyp [ms]} \\ \hline
 		1 & 4911 & 5552\\ \hline
 		2 & 5362 & 7264\\ \hline
 		3 & 6101 & 6308\\ \hline
