Fixed tables numbering

--- a/thesis.tex
+++ b/thesis.tex
@@ -239,7 +239,7 @@ Kraków, 2012
 \lstlistoflistings
 \addcontentsline{toc}{chapter}{Spis fragmentów kodu}
 
-%\listoftables  % print list of tables
+\listoftables  % print list of tables
 
 \lstset{language=XML, tabsize=4,caption=XML Schema dla pliku konfiguracyjnego,label=lst:xml_schema}
 \appendix
