--- a/1_introduction/introduction.tex
+++ b/1_introduction/introduction.tex
@@ -30,23 +30,24 @@
 
 \section{Definicja problemu} % section headings are printed smaller than chapter names
 % intro
-Komputerowe przetwarzanie mowy jest w ostatnim czasie szybko rozwijającą się dziedziną w przemyśle informatycznym. Wykorzystuje się je w wielu różnych dziedzinach zarówno związanych z rozrywką (rozmaite gry polegające na jak najwierniejszym zaśpiewaniu podanego utworu), z życiem codziennym (Apple Siri czyli wirtualny asystent) jak i z pracą (różne systemy telefoniczne działające bez udziału człowieka). W wielu sytuacjach wykorzystanie komputerowego przetwarzania mowy jest niezastąpione.
-Podobnie sytuacja wygląda z architekturą SOA. W ciągu ostatnich lat zdecydowanie dominuje w projektowanych, nowych systemach informatycznych. Co więcej zdarzały się też sytuacje w których firmy decydowały się na przepisanie swoich aplikacji na architekturę zgodną z tym paradygmatem (na przykład Amazon). Jednym z główych powodów takiego stanu rzeczy jest uproszczenie modelu współczesnych dużych aplikacji. Umożliwia ono podzielenie systemu na serwisy które są niezależnymi, samodzielnymi, łatwymi w zarządzaniu, posiadającymi jasno i jednoznacznie zdefiniowane interfejsy encjami, które można wykorzystać w różnej kolejności w celu otrzymania różnych efektów. W chwili obecnej istnieje wiele serwisów oferujących różne formy przetwarzania mowy, niestety znakomita ich większość ma bardzo ograniczoną funkcjonalność, umożliwiającą tylko jeden rodzaj transformacji, na przykład oferując tylko TTS lub OCR. Pomimo tego, że często jest to wystarczające to jednak łatwo wyobrazić sobie zalety systemu oferującego szerszą funkcjonalność, umożliwiającego na przykład nie tylko rozpoznanie mowy, ale też wykrycie jej języka, przetłumaczenie i zwrócenie w postaci tekstowej. Przykładowe zalety to:
- \begin{itemize}
-	\item centralizacja
-	\item ujednolicony interfejs
-	\item łatwość wykorzystania
-	\item pojedynczy punkt awarii - z punktu widzenia aplikacji klienckiej
-\end{itemize} 
-Najlepszym sposobem stworzenia systemu posiadającego tak szeroką funkcjonalność jest zbudowanie go poprzez integrację istniejących już serwisów. Integracja to łączenie mniejszych elementów ze sobą w celu stworzenia większego, spójnego, poprawnie działającego elementu. W informatyce pojęcie to może dotyczyć zarówno całych systemów jak i mniejszych elementów takich jak serwisy czy też biblioteki. Czasami integracja nie kończy się tylko na łączeniu funkcjonalności ale także na dodawaniu nowych, jest to spowodowane tym, że system składający się z wielu komponentów mających różne zastosowania ma dzięki temu dużo większe możliwości i może uzyskać funkcjonalność jakiej jego składowe nie byłyby w stanie osiągnąć samodzielnie. Integracja systemów informatycznych jest zadaniem bardzo trudnym, mającym charakter przekrojowy, wymagającym wiedzy z wielu dziedzin takich jak:
+Komputerowe przetwarzanie mowy jest w ostatnim czasie szybko rozwijającą się dziedziną w przemyśle informatycznym. Wykorzystuje się je w wielu różnych dziedzinach zarówno związanych z rozrywką (rozmaite gry polegające na jak najwierniejszym zaśpiewaniu podanego utworu), z życiem codziennym (Apple Siri czyli wirtualny asystent) jak i z pracą (różne systemy telefoniczne działające bez udziału człowieka). W wielu sytuacjach wykorzystanie komputerowego przetwarzania mowy jest niezastąpione.W chwili obecnej istnieje wiele serwisów oferujących różne formy przetwarzania mowy, niestety znakomita ich większość ma bardzo ograniczoną funkcjonalność, umożliwiającą tylko jeden rodzaj transformacji, na przykład oferując tylko TTS lub OCR. Pomimo tego, że często jest to wystarczające to jednak między tymi technologiami można zaobserwować efekt synergii, co sprawia, że łatwo wyobrazić sobie zalety systemu oferującego szerszą funkcjonalność, umożliwiającego na przykład nie tylko rozpoznanie mowy, ale też wykrycie jej języka, przetłumaczenie i zwrócenie w postaci tekstowej. Istnieją dwie diametralnie odmienne możliwości stworzenia takiego system, pierwsza z nich to napisanie wszystkiego od nowa, kolejna to wykorzystanie gotowych usług. Rozwiązanie drugie jest o wiele lepsze gdyż pozwala na wykoszystanie gotowych, wielokrotnie przetestowanych, mających zaufanie oraz łatwo dostępnych usług zamiast tworzenia wszystkiego od nowa, co samo w sobie jest bardzo skomplikowane. Trudność tego rozwiązania polega na konieczności integracji istniejących systemów. Integracja to łączenie mniejszych elementów ze sobą w celu stworzenia większego, spójnego, poprawnie działającego elementu. W informatyce pojęcie to może dotyczyć zarówno całych systemów jak i mniejszych elementów takich jak serwisy czy też biblioteki. Czasami integracja nie kończy się tylko na łączeniu funkcjonalności ale także na dodawaniu nowych, jest to spowodowane tym, że system składający się z wielu komponentów mających różne zastosowania ma dzięki temu dużo większe możliwości i może uzyskać funkcjonalność jakiej jego składowe nie byłyby w stanie osiągnąć samodzielnie. Integracja systemów informatycznych jest zadaniem bardzo trudnym, mającym charakter przekrojowy, wymagającym wiedzy z wielu dziedzin takich jak:
  \begin{itemize}
 	\item sieci komputerowe
 	\item programowanie
 	\item architektura systemów
 	\item zarządzanie procesami biznesowymi
 	\item znajomość narzędzi wspierających integrację
-\end{itemize} 
-Celem tej pracy jest zbadanie możliwości integracji istniejących systemów oferujących usługi przetwrzania mowy. Należy zwrócić szczególną uwagę na to czy specyficzna dziedzina problemu, jaką niewątpliwie jest przerwarzanie mowy, ma duży wpływ na wybór sposobu integracj oraz na to czy zasadnym jest tworzenie takiej platformy, czy jest na nią zapotrzebowanie, w jakim stopniu jest innowacyjna oraz do jakich celów mogłaby zostać wykozystana.
+\end{itemize}   
+Integracja nie jest problemem nowym, jest już dobrze zbadana, na jej temat powstało wiele prac naukowych i książek. Jednak jako, że systemy przetwarzania mowy są specyficzne, to ich integracja nie jest tak oczywista. Co więcej, dzięki silnej synergii między nimi, korzyści płynące z ich integracji mogą okazać się wymierne. Celem tej pracy jest zbadanie możliwości intergracji systemów przetwarzania mowy. Problem ten można sprowadzić do próby odpowiedzi na następujące pytania:
+ \begin{itemize}
+	\item  czy modele i wzorce proponowane przy innych rozwiązaniach integracyjnych mają zastosowanie dla tak specyficznej dziedziny problemu?
+	\item  czy integracja systemów przetwarzana mowy ma sens?
+	\item czy istnieje zapotrzebowanie na platformę integrującą systemy przetwarzania mowy?
+	\item jakie mogą być zastosowania takiego zintegrowanego systemu?
+	\item jakie są zalety istnienia takiej platformy?
+	\item jakie są wady takiej platformy?
+\end{itemize}  
+Odpowiedzi na te i wiele innych pytań przedstawione są w kolejnych rozdziałach.
 
 \section{Obszar badań} % subsection headings are again smaller than section names
 W skład  pracy wchodzą zarówno technologie związane z architekturą SOA jak i z przetwarzaniem mowy. W celu użycia odpowiednich narzędzi przeprowadzono wiele badań i testów w czasie których dużą wagę przykładano do:
