--- a/1_introduction/introduction.tex
+++ b/1_introduction/introduction.tex
@@ -30,7 +30,7 @@
 
 \section{Definicja problemu} % section headings are printed smaller than chapter names
 % intro
-Komputerowe przetwarzanie mowy jest w ostatnim czasie szybko rozwijającą się dziedziną w przemyśle informatycznym. Wykorzystuje się je w wielu różnych dziedzinach zarówno związanych z rozrywką (rozmaite gry polegające na jak najwierniejszym zaśpiewaniu podanego utworu), z życiem codziennym (Apple Siri czyli wirtualny asystent) jak i z pracą (różne systemy telefoniczne działające bez udziału człowieka). W wielu sytuacjach wykorzystanie komputerowego przetwarzania mowy jest niezastąpione.W chwili obecnej istnieje wiele serwisów oferujących różne formy przetwarzania mowy, niestety znakomita ich większość ma bardzo ograniczoną funkcjonalność, umożliwiającą tylko jeden rodzaj transformacji, na przykład oferując tylko TTS lub OCR. Pomimo tego, że często jest to wystarczające to jednak między tymi technologiami można zaobserwować efekt synergii, co sprawia, że łatwo wyobrazić sobie zalety systemu oferującego szerszą funkcjonalność, umożliwiającego na przykład nie tylko rozpoznanie mowy, ale też wykrycie jej języka, przetłumaczenie i zwrócenie w postaci tekstowej. Istnieją dwie diametralnie odmienne możliwości stworzenia takiego system, pierwsza z nich to napisanie wszystkiego od podstaw, kolejna to wykorzystanie gotowych usług. Rozwiązanie drugie jest o wiele lepsze gdyż pozwala na wykoszystanie gotowych, wielokrotnie przetestowanych, mających zaufanie oraz łatwo dostępnych usług zamiast tworzenia wszystkiego od podstaw, co samo w sobie jest bardzo skomplikowane. Należy też zauważyć, że rozwiązanie to opiera sie na użyciu gotowych usług dlatego też zastosowanie paradygmatu SOA, przy jego implementacji, powinno być dość naturalne. Paradygmat SOA zdecydowanie dominuje w obecnie projektowanych architekturach. Jednym z główych powodów takiego stanu rzeczy jest uproszczenie modelu współczesnych dużych aplikacji. Umożliwia ono podzielenie systemu na serwisy które są niezależnymi, samodzielnymi, łatwymi w zarządzaniu, posiadającymi jasno i jednoznacznie zdeﬁniowane interfejsy encjami, które można wykorzystać w różnej kolejności w celu otrzymania różnych efektów. Trudność proponowanego rozwiązania polega na konieczności integracji istniejących systemów. Integracja to łączenie mniejszych elementów ze sobą w celu stworzenia większego, spójnego, poprawnie działającego elementu. W informatyce pojęcie to może dotyczyć zarówno całych systemów jak i mniejszych elementów takich jak serwisy czy też biblioteki. Czasami integracja nie kończy się tylko na łączeniu funkcjonalności ale także na dodawaniu nowych, jest to spowodowane tym, że system składający się z wielu komponentów mających różne zastosowania ma dzięki temu dużo większe możliwości i może uzyskać funkcjonalność jakiej jego składowe nie byłyby w stanie osiągnąć samodzielnie. Integracja systemów informatycznych jest zadaniem bardzo trudnym, mającym charakter przekrojowy, wymagającym wiedzy z wielu dziedzin takich jak:
+Komputerowe przetwarzanie mowy jest w ostatnim czasie szybko rozwijającą się dziedziną w przemyśle informatycznym. Wykorzystuje się je w wielu różnych dziedzinach zarówno związanych z rozrywką (rozmaite gry polegające na jak najwierniejszym zaśpiewaniu podanego utworu), z życiem codziennym (Apple Siri czyli wirtualny asystent) jak i z pracą (różne systemy telefoniczne działające bez udziału człowieka). W wielu sytuacjach wykorzystanie komputerowego przetwarzania mowy jest niezastąpione.W chwili obecnej istnieje wiele serwisów oferujących różne formy przetwarzania mowy, niestety znakomita ich większość ma bardzo ograniczoną funkcjonalność, umożliwiającą tylko jeden rodzaj transformacji, na przykład oferując tylko TTS lub OCR. Pomimo tego, że często jest to wystarczające to jednak między tymi technologiami można zaobserwować efekt synergii, co sprawia, że łatwo wyobrazić sobie zalety systemu oferującego szerszą funkcjonalność, umożliwiającego na przykład nie tylko rozpoznanie mowy, ale też wykrycie jej języka, przetłumaczenie i zwrócenie w postaci tekstowej. Istnieją dwie diametralnie odmienne możliwości stworzenia takiego system, pierwsza z nich to napisanie wszystkiego od podstaw, kolejna to wykorzystanie gotowych usług. Rozwiązanie drugie jest o wiele lepsze gdyż pozwala na wykoszystanie gotowych, wielokrotnie przetestowanych, mających zaufanie oraz łatwo dostępnych usług zamiast tworzenia wszystkiego od podstaw, co samo w sobie jest bardzo skomplikowane. Należy też zauważyć, że rozwiązanie to opiera sie na użyciu gotowych usług dlatego też zastosowanie paradygmatu SOA, przy jego implementacji, powinno być dość naturalne. Paradygmat SOA zdecydowanie dominuje w obecnie projektowanych architekturach. Jednym z główych powodów takiego stanu rzeczy jest uproszczenie modelu współczesnych dużych aplikacji. Umożliwia ono podzielenie systemu na serwisy, które są niezależnymi, samodzielnymi, łatwymi w zarządzaniu, posiadającymi jasno i jednoznacznie zdefiniowane interfejsy encjami, które można wykorzystać w różnej kolejności w celu otrzymania różnych efektów. Trudność proponowanego rozwiązania polega na konieczności integracji istniejących systemów. Integracja to łączenie mniejszych elementów ze sobą w celu stworzenia większego, spójnego, poprawnie działającego elementu. W informatyce pojęcie to może dotyczyć zarówno całych systemów jak i mniejszych elementów takich jak serwisy czy też biblioteki. Czasami integracja nie kończy się tylko na łączeniu funkcjonalności ale także na dodawaniu nowych, jest to spowodowane tym, że system składający się z wielu komponentów mających różne zastosowania ma dzięki temu dużo większe możliwości i może uzyskać funkcjonalność jakiej jego składowe nie byłyby w stanie osiągnąć samodzielnie. Integracja systemów informatycznych jest zadaniem bardzo trudnym, mającym charakter przekrojowy, wymagającym wiedzy z wielu dziedzin takich jak:
  \begin{itemize}
 	\item sieci komputerowe
 	\item programowanie
