--- a/3/technologie.tex
+++ b/3/technologie.tex
@@ -211,20 +211,20 @@ Poza wyborem języka istnieje też możliwość wyboru lektora, różnią się o
 Google Translate to płatna usługa Google umożliwiająca tłumaczenie tekstu pomiędzy tysiącami dostępnych par języków. Poza tłumaczeniem usługa ta umożliwia również rozpoznanie języka. API udostępniane przez korporację opiera się o architekturę REST, składa się z trzech metod:
 \begin{itemize}
 	\item translate - tłumaczy tekst z języka źródłowego na docelowy, przykład:
-		\lstset{caption={Tłumaczenie słowa hello z angielskiego na polskil},label=DescriptiveLabel}
-			\begin{lstlisting}
-				https://www.googleapis.com/language/translate/v2?key=INSERT-YOUR-KEY&q=hello%20world&source=en&target=pl
-			\end{lstlisting}
+	\lstset{caption={Tłumaczenie słowa hello z angielskiego na polski},label=DescriptiveLabel}
+	\begin{lstlisting}
+	https://www.googleapis.com/language/translate/v2?key=INSERT-YOUR-KEY&q=hello%20world&source=en&target=pl
+	\end{lstlisting}
 	\item languages - zwraca listę języków wspieranych przez translator
-		\lstset{caption={Przykład pobrania listy dostępnych językówl},label=DescriptiveLabel}
-			\begin{lstlisting}
-				https://www.googleapis.com/language/translate/v2/languages?key=INSERT-YOUR-KEY&target=zh-TW
-			\end{lstlisting}
+	\lstset{caption={Przykład pobrania listy dostępnych języków},label=DescriptiveLabel}
+	\begin{lstlisting}
+	https://www.googleapis.com/language/translate/v2/languages?key=INSERT-YOUR-KEY&target=zh-TW
+	\end{lstlisting}
 	\item detect - rozpoznaje język tekstu źródłowego
-		\lstset{caption={Przykład detekcji językal},label=DescriptiveLabel}
-			\begin{lstlisting}
-				https://www.googleapis.com/language/translate/v2/detect?key=INSERT-YOUR-KEY&q=google+translate+is+fast
-			\end{lstlisting}
+	\lstset{caption={Przykład detekcji języka},label=DescriptiveLabel}
+	\begin{lstlisting}
+	https://www.googleapis.com/language/translate/v2/detect?key=INSERT-YOUR-KEY&q=google+translate+is+fast
+	\end{lstlisting}
 \end{itemize}
 Parametr key=INSERT-YOUR-KEY służy korporacji do identyfikowania usługobiorcy, na jego podstawie naliczane są opłaty. Jak widać REST w API Google Translate różni się nieznacznie od tradycyjnego pojmowania tej architektury. Zamiast dostarczać dostęp do zasobów, dostarczany jest dostęp do usług, stosując takie podejście uzyskano możliwość wykorzystania jednego URI jako całego API. 
 
